# engine_prototype

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: demo_level.prefab
assets/pipelines/: debug_no_depth.material  debug_no_depth.pipeline
assets/prefabs/: test.prefab
assets_unprocessed/temp/: sponza.glb.meta.old
docs/: architecture.graffle
engine/: Cargo.toml
engine/src/: asset_loader.rs  components.rs  daemon.rs  game_asset_lookup.rs  game_resource_manager.rs  init.rs  lib.rs  main.rs  registration.rs  test_scene.rs
engine/src/assets/gltf/: assets.rs  importer.rs
engine/src/components/: directional_light_component.rs  editable_handle.rs  mesh_component.rs  mod.rs  point_light_component.rs  spot_light_component.rs
engine/src/features/debug3d/: debug3d_resource.rs  extract.rs  mod.rs  prepare.rs  write.rs
engine/src/features/imgui/: extract.rs  mod.rs  prepare.rs  write.rs
engine/src/features/mesh/: extract.rs  mod.rs  write.rs
engine/src/features/sprite/: extract.rs  write.rs
engine/src/game_renderer/: mod.rs  render_frame_job.rs  static_resources.rs  swapchain_resources.rs
engine/src/imgui_support/: sdl2_imgui_manager.rs
engine/src/phases/: mod.rs  pre_ui_render_phase.rs
engine/src/renderpass/: bloom_blur_renderpass.rs  bloom_combine_renderpass.rs  bloom_extract_renderpass.rs  opaque_renderpass.rs  ui_renderpass.rs
engine/src/systems/: add_light_debug_draw.rs  app_control_systems.rs  mod.rs  temp_logic.rs  update_resource_manager.rs
engine/src_old/: main.rs
