[workspace]
members = [
    "engine",
]

exclude = [
    "atelier-assets",
    "renderer",
    "minimum"
]

#[profile.dev.overrides.bincode]
#opt-level = 2

#[profile.dev.overrides.image]
#opt-level = 2

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 2

[profile.dev.package."prefab-format"]
opt-level = 0
[profile.dev.package."legion-prefab"]
opt-level = 0

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 2

#[patch.crates-io]
#gltf = { path = "gltf" }

[patch."https://github.com/amethyst/atelier-assets"]
atelier-assets = { path = "atelier-assets" }


[patch."https://github.com/aclysma/minimum"]
minimum = { path = "minimum/minimum" }
minimum-sdl2 = { path = "minimum/contrib/minimum-sdl2" }


#[patch."https://github.com/aclysma/renderer_prototype"]
#renderer = { path = "renderer/renderer" }
