[package]
name = "engine"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renderer = { git = "https://github.com/aclysma/renderer_prototype.git" }
minimum = { git = "https://github.com/aclysma/minimum.git" }