[package]
name = "engine"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renderer = { git = "https://github.com/aclysma/renderer_prototype.git", branch="minimum-0.3" }
renderer-shell-vulkan-sdl2 = { git = "https://github.com/aclysma/renderer_prototype.git", branch="minimum-0.3" }
minimum = { git = "https://github.com/aclysma/minimum.git", branch="minimum-0.3" }
minimum-sdl2 = { git = "https://github.com/aclysma/minimum.git", branch="minimum-0.3" }

legion-transaction = { git = "https://github.com/aclysma/prefab", branch="minimum-legion-0.3" }
legion-prefab = { git = "https://github.com/aclysma/prefab", branch="minimum-legion-0.3" }
prefab-format = { git = "https://github.com/aclysma/prefab", branch="minimum-legion-0.3" }

serde-diff = "0.3"
imgui-inspect-derive = "0.6"
imgui-inspect = "0.6"

ash = ">0.30"
imgui = "0.5"
imgui-sdl2 = "0.11.0"
sdl2 = { version = "0.34", features = ["bundled", "static-link"] }
image = "0.23"
# for https://github.com/gltf-rs/gltf/pull/288
#gltf = "0.15"
gltf = { git = "https://github.com/gltf-rs/gltf.git", rev = "e49aef5ee7b40c2c8f8a50efaed36b97bbb52bd4", features = ["KHR_lights_punctual"] }

crossbeam-channel = "0.4.2"

vk-mem = "0.2"

legion = { version = "0.3.0", default-features = false, features = ["serialize"] }
atelier-assets = { git = "https://github.com/aclysma/atelier-assets", branch = "minimum-0.3", features = ["serde_importers", "asset_uuid_macro"] }
futures-lite = "1.3.0"

env_logger = "0.6"

log="0.4"
glam = "0.8.6"
rand = "0.7.3"
pcg_rand = "0.11.1"

fnv = "1.0"

serde = "1"
serde_bytes = "0.11"
uuid = "0.8"
type-uuid = "0.1"
image2 = { version = "0.11", features = [ "ser" ] }
inventory = "0.1"
dashmap = { version = "3.11" }

bincode = "1.3.1"
mopa = "0.2"

ron = "0.5"

arrayvec = "0.5"

structopt = "0.3"

itertools = "0.8"

# For selection logic
nalgebra = { version = "0.18", features = [ "serde-serialize" ] }
nalgebra-glm = "0.4"
ncollide3d = "0.20"

[features]
default = ["use_imgui"]
use_imgui = []
static-vulkan = ["renderer/static-vulkan"]